chore: improved security